fix: Update Network Throttling Setting with correct values and accurate description
Fixes #351

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Laat Windows toe om speletjies te optimaliseer wat in volskermmodus loop. Deaktivering kan verrigtingskwessies of hakkel in sommige ouer speletjies regstel wat nie goed werk met randlose volskermoptimalisering nie",
   "Setting_gaming-performance-desktop-composition_Name": "Lessenaar Komposisie-effekte",
   "Setting_gaming-performance-desktop-composition_Description": "Aktiveer visuele effekte bestuur deur die Desktop Window Manager. Deaktivering mag geringe verrigtingswinste op ouer hardeware bied maar sal Aero-effekte breek",
-  "Setting_gaming-network-throttling_Name": "Deaktiveer Netwerkbeperking vir Speletjies",
-  "Setting_gaming-network-throttling_Description": "Deaktiveer netwerkpakketbeperking om vertraging te verminder en aanlyn spelresponsiwiteit te verbeter",
+  "Setting_gaming-network-throttling_Name": "Netwerkbeperking",
+  "Setting_gaming-network-throttling_Description": "Beheer netwerkpakket-tempobeperkings vir multimediatoepassings. Dit word aanbeveel om beperking geaktiveer te hou (verstek: 10 pakkette/ms) aangesien dit beter DPC-latensie vir speletjies bied as om dit heeltemal te deaktiveer",
   "Setting_gaming-nagle-algorithm_Name": "Aktiveer Nagle se Algoritme",
   "Setting_gaming-nagle-algorithm_Description": "Bondel klein netwerkpakkies saam voordat dit gestuur word om doeltreffendheid te verbeter. Deaktivering verminder vertraging vir intydse aanlyn spel maar mag bandwydtegebruik effens verhoog",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox GameDVR",
