--- a/src/Winhance.UI/Features/Common/Localization/ar.json
+++ b/src/Winhance.UI/Features/Common/Localization/ar.json
@@ -592,8 +592,8 @@
     "Setting_gaming-fullscreen-optimizations_Description": "السماح لـ Windows بتحسين الألعاب التي تعمل بوضع ملء الشاشة. تعطيله قد يحل مشاكل الأداء أو التقطيع في بعض الألعاب القديمة التي لا تعمل جيدًا مع تحسين ملء الشاشة بدون حدود",
     "Setting_gaming-performance-desktop-composition_Name": "تأثيرات تكوين سطح المكتب",
     "Setting_gaming-performance-desktop-composition_Description": "تمكين التأثيرات المرئية التي يديرها \"Desktop Window Manager\". تعطيله قد يوفر مكاسب أداء بسيطة على الأجهزة الأقدم لكنه يعطّل تأثيرات Aero",
-    "Setting_gaming-network-throttling_Name": "تعطيل تقييد الشبكة للألعاب",
-    "Setting_gaming-network-throttling_Description": "تعطيل تقييد حزم الشبكة لتقليل زمن الاستجابة وتحسين استجابة اللعب عبر الإنترنت",
+    "Setting_gaming-network-throttling_Name": "تقييد الشبكة",
+    "Setting_gaming-network-throttling_Description": "يتحكم في تحديد معدل حزم الشبكة لتطبيقات الوسائط المتعددة. يُوصى بإبقاء التقييد مفعلاً (الافتراضي: 10 حزم/مللي ثانية) لأنه يوفر زمن استجابة DPC أفضل للألعاب مقارنة بتعطيله بالكامل",
     "Setting_gaming-nagle-algorithm_Name": "تمكين خوارزمية Nagle",
     "Setting_gaming-nagle-algorithm_Description": "تجميع حزم الشبكة الصغيرة قبل إرسالها لتحسين الكفاءة. تعطيلها يقلل زمن الاستجابة للألعاب عبر الإنترنت في الوقت الحقيقي لكنه قد يزيد قليلاً استخدام النطاق الترددي",
     "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
