--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Povolit Windows optimalizovat hry běžící v režimu celé obrazovky. Vypnutí může opravit problémy s výkonem nebo zadrháváním v některých starších hrách, které nefungují dobře s optimalizací bez okrajů na celou obrazovku",
   "Setting_gaming-performance-desktop-composition_Name": "Efekty kompozice plochy",
   "Setting_gaming-performance-desktop-composition_Description": "Povolit vizuální efekty spravované Správcem oken plochy. Vypnutí může přinést menší zvýšení výkonu na starším hardwaru, ale poruší efekty Aero",
-  "Setting_gaming-network-throttling_Name": "Zakázat omezování sítě pro hraní her",
-  "Setting_gaming-network-throttling_Description": "Zakázat omezování síťových paketů pro snížení latence a zlepšení odezvy online her",
+  "Setting_gaming-network-throttling_Name": "Omezování sítě",
+  "Setting_gaming-network-throttling_Description": "Řídí omezování rychlosti síťových paketů pro multimediální aplikace. Doporučuje se ponechat omezování zapnuté (výchozí: 10 paketů/ms), protože poskytuje lepší latenci DPC pro hraní her než jeho úplné vypnutí",
   "Setting_gaming-nagle-algorithm_Name": "Povolit Nagleův algoritmus",
   "Setting_gaming-nagle-algorithm_Description": "Seskupovat malé síťové pakety před odesláním pro zlepšení efektivity. Vypnutí snižuje latenci pro online hraní v reálném čase, ale může mírně zvýšit využití šířky pásma",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
