--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Windows erlauben, Spiele im Vollbildmodus zu optimieren. Das Deaktivieren kann Leistungsprobleme oder Ruckeln in einigen älteren Spielen beheben, die nicht gut mit der randlosen Vollbildoptimierung funktionieren",
   "Setting_gaming-performance-desktop-composition_Name": "Desktop-Kompositionseffekte",
   "Setting_gaming-performance-desktop-composition_Description": "Aktivieren Sie visuelle Effekte, die vom Desktop Window Manager verwaltet werden. Das Deaktivieren kann geringfügige Leistungssteigerungen bei älterer Hardware bringen, bricht aber die Aero-Effekte",
-  "Setting_gaming-network-throttling_Name": "Netzwerkdrosselung für Spiele deaktivieren",
-  "Setting_gaming-network-throttling_Description": "Deaktivieren Sie die Drosselung von Netzwerkpaketen, um die Latenz zu reduzieren und die Reaktionsfähigkeit bei Online-Spielen zu verbessern",
+  "Setting_gaming-network-throttling_Name": "Netzwerkdrosselung",
+  "Setting_gaming-network-throttling_Description": "Steuert die Paketratenbegrenzung für Multimediaanwendungen. Es wird empfohlen, die Drosselung aktiviert zu lassen (Standard: 10 Pakete/ms), da sie eine bessere DPC-Latenz für Spiele bietet als eine vollständige Deaktivierung",
   "Setting_gaming-nagle-algorithm_Name": "Nagle-Algorithmus aktivieren",
   "Setting_gaming-nagle-algorithm_Description": "Kleine Netzwerkpakete vor dem Senden zusammenfassen, um die Effizienz zu verbessern. Das Deaktivieren reduziert die Latenz für Echtzeit-Online-Spiele, kann aber die Bandbreitennutzung leicht erhöhen",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
