--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Να επιτρέπεται στα Windows η βελτιστοποίηση παιχνιδιών που τρέχουν σε λειτουργία πλήρους οθόνης. Η απενεργοποίηση μπορεί να διορθώσει προβλήματα απόδοσης ή διακοπές σε ορισμένα παλαιότερα παιχνίδια που δεν λειτουργούν καλά με βελτιστοποίηση πλήρους οθόνης χωρίς περιθώρια",
   "Setting_gaming-performance-desktop-composition_Name": "Εφέ Σύνθεσης Επιφάνειας Εργασίας",
   "Setting_gaming-performance-desktop-composition_Description": "Ενεργοποίηση οπτικών εφέ που διαχειρίζεται ο Διαχειριστής Παραθύρων Επιφάνειας Εργασίας. Η απενεργοποίηση μπορεί να προσφέρει μικρά οφέλη απόδοσης σε παλαιότερο υλικό αλλά θα διακόψει τα εφέ Aero",
-  "Setting_gaming-network-throttling_Name": "Απενεργοποίηση Περιορισμού Δικτύου για Παιχνίδια",
-  "Setting_gaming-network-throttling_Description": "Απενεργοποίηση περιορισμού πακέτων δικτύου για μείωση καθυστέρησης και βελτίωση απόκρισης online παιχνιδιού",
+  "Setting_gaming-network-throttling_Name": "Περιορισμός δικτύου",
+  "Setting_gaming-network-throttling_Description": "Ελέγχει τον περιορισμό ρυθμού πακέτων δικτύου για εφαρμογές πολυμέσων. Συνιστάται να διατηρείτε τον περιορισμό ενεργοποιημένο (προεπιλογή: 10 πακέτα/ms) καθώς παρέχει καλύτερη καθυστέρηση DPC για παιχνίδια από την πλήρη απενεργοποίησή του",
   "Setting_gaming-nagle-algorithm_Name": "Ενεργοποίηση Αλγορίθμου Nagle",
   "Setting_gaming-nagle-algorithm_Description": "Ομαδοποίηση μικρών πακέτων δικτύου πριν την αποστολή για βελτίωση αποδοτικότητας. Η απενεργοποίηση μειώνει την καθυστέρηση για online παιχνίδια σε πραγματικό χρόνο αλλά μπορεί να αυξήσει ελαφρώς τη χρήση εύρους ζώνης",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
