--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -642,8 +642,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Allow Windows to optimize games running in fullscreen mode. Disabling can fix performance issues or stuttering in some older games that don\u0027t work well with borderless fullscreen optimization",
   "Setting_gaming-performance-desktop-composition_Name": "Desktop Composition Effects",
   "Setting_gaming-performance-desktop-composition_Description": "Enable visual effects managed by the Desktop Window Manager. Disabling may provide minor performance gains on older hardware but will break Aero effects",
-  "Setting_gaming-network-throttling_Name": "Disable Network Throttling for Gaming",
-  "Setting_gaming-network-throttling_Description": "Disable network packet throttling to reduce latency and improve online gaming responsiveness",
+  "Setting_gaming-network-throttling_Name": "Network Throttling",
+  "Setting_gaming-network-throttling_Description": "Controls network packet rate limiting for multimedia applications. Keeping throttling enabled (default: 10 packets/ms) is recommended as it provides better DPC latency for gaming than disabling it entirely",
   "Setting_gaming-nagle-algorithm_Name": "Enable Nagle\u0027s Algorithm",
   "Setting_gaming-nagle-algorithm_Description": "Batch small network packets together before sending to improve efficiency. Disabling reduces latency for real-time online gaming but may slightly increase bandwidth usage",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
