--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Permite que Windows optimice los juegos que se ejecutan en modo de pantalla completa. Deshabilitar puede solucionar problemas de rendimiento o tartamudeo en algunos juegos antiguos que no funcionan bien con la optimización de pantalla completa sin bordes",
   "Setting_gaming-performance-desktop-composition_Name": "Efectos de Composición de Escritorio",
   "Setting_gaming-performance-desktop-composition_Description": "Habilita los efectos visuales gestionados por el Administrador de ventanas de escritorio. Deshabilitar puede proporcionar mejoras de rendimiento menores en hardware antiguo, pero romperá los efectos Aero",
-  "Setting_gaming-network-throttling_Name": "Deshabilitar la limitación de red para juegos",
-  "Setting_gaming-network-throttling_Description": "Deshabilita la limitación de paquetes de red para reducir la latencia y mejorar la capacidad de respuesta de los juegos en línea",
+  "Setting_gaming-network-throttling_Name": "Limitación de red",
+  "Setting_gaming-network-throttling_Description": "Controla la limitación de velocidad de paquetes de red para aplicaciones multimedia. Se recomienda mantener la limitación activada (predeterminado: 10 paquetes/ms) ya que proporciona mejor latencia DPC para juegos que desactivarla por completo",
   "Setting_gaming-nagle-algorithm_Name": "Habilitar Algoritmo de Nagle",
   "Setting_gaming-nagle-algorithm_Description": "Agrupa pequeños paquetes de red antes de enviarlos para mejorar la eficiencia. Deshabilitarlo reduce la latencia para juegos en línea en tiempo real, pero puede aumentar ligeramente el uso de ancho de banda",
   "Setting_gaming-xbox-game-dvr_Name": "DVR de Juegos de Xbox",
