--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Autoriser Windows à optimiser les jeux s'exécutant en mode plein écran. La désactivation peut résoudre des problèmes de performances ou de saccades dans certains jeux plus anciens qui ne fonctionnent pas bien avec l'optimisation plein écran sans bordure",
   "Setting_gaming-performance-desktop-composition_Name": "Effets de composition de bureau",
   "Setting_gaming-performance-desktop-composition_Description": "Activez les effets visuels gérés par le gestionnaire de fenêtres du bureau. La désactivation peut fournir de légers gains de performances sur du matériel plus ancien mais interrompra les effets Aero",
-  "Setting_gaming-network-throttling_Name": "Désactiver la limitation du réseau pour les jeux",
-  "Setting_gaming-network-throttling_Description": "Désactivez la limitation des paquets réseau pour réduire la latence et améliorer la réactivité des jeux en ligne",
+  "Setting_gaming-network-throttling_Name": "Limitation réseau",
+  "Setting_gaming-network-throttling_Description": "Contrôle la limitation du débit des paquets réseau pour les applications multimédias. Il est recommandé de garder la limitation activée (par défaut : 10 paquets/ms) car elle offre une meilleure latence DPC pour les jeux que sa désactivation complète",
   "Setting_gaming-nagle-algorithm_Name": "Activer l'algorithme de Nagle",
   "Setting_gaming-nagle-algorithm_Description": "Regroupez les petits paquets réseau avant de les envoyer pour améliorer l'efficacité. La désactivation réduit la latence pour les jeux en ligne en temps réel mais peut légèrement augmenter l'utilisation de la bande passante",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
