--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "विंडोज को पूर्णस्क्रीन मोड में चल रहे गेम को अनुकूलित करने की अनुमति दें। अक्षम करने से कुछ पुराने गेम में प्रदर्शन संबंधी समस्याएं या हकलाना ठीक हो सकता है जो बॉर्डरलेस पूर्णस्क्रीन ऑप्टिमाइज़ेशन के साथ अच्छी तरह से काम नहीं करते हैं",
   "Setting_gaming-performance-desktop-composition_Name": "डेस्कटॉप संरचना प्रभाव",
   "Setting_gaming-performance-desktop-composition_Description": "डेस्कटॉप विंडो मैनेजर द्वारा प्रबंधित दृश्य प्रभाव सक्षम करें। अक्षम करने से पुराने हार्डवेयर पर मामूली प्रदर्शन लाभ मिल सकता है लेकिन एयरो प्रभाव टूट जाएगा",
-  "Setting_gaming-network-throttling_Name": "गेमिंग के लिए नेटवर्क थ्रॉटलिंग अक्षम करें",
-  "Setting_gaming-network-throttling_Description": "विलंबता कम करने और ऑनलाइन गेमिंग जवाबदेही में सुधार करने के लिए नेटवर्क पैकेट थ्रॉटलिंग अक्षम करें",
+  "Setting_gaming-network-throttling_Name": "नेटवर्क थ्रॉटलिंग",
+  "Setting_gaming-network-throttling_Description": "मल्टीमीडिया अनुप्रयोगों के लिए नेटवर्क पैकेट दर सीमित करने को नियंत्रित करता है। थ्रॉटलिंग को सक्षम रखना (डिफ़ॉल्ट: 10 पैकेट/ms) अनुशंसित है क्योंकि यह गेमिंग के लिए इसे पूरी तरह अक्षम करने की तुलना में बेहतर DPC विलंबता प्रदान करता है",
   "Setting_gaming-nagle-algorithm_Name": "नागल का एल्गोरिदम सक्षम करें",
   "Setting_gaming-nagle-algorithm_Description": "दक्षता में सुधार के लिए भेजने से पहले छोटे नेटवर्क पैकेट को एक साथ बैच करें। अक्षम करने से रीयल-टाइम ऑनलाइन गेमिंग के लिए विलंबता कम हो जाती है लेकिन बैंडविड्थ उपयोग थोड़ा बढ़ सकता है",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox गेम DVR",
