--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Consenti a Windows di ottimizzare i giochi in esecuzione in modalità a schermo intero. La disabilitazione può risolvere problemi di prestazioni o stuttering in alcuni giochi meno recenti che non funzionano bene con l'ottimizzazione a schermo intero senza bordi",
   "Setting_gaming-performance-desktop-composition_Name": "Effetti di composizione del desktop",
   "Setting_gaming-performance-desktop-composition_Description": "Abilita gli effetti visivi gestiti da Desktop Window Manager. La disabilitazione può fornire piccoli guadagni di prestazioni su hardware meno recente ma interromperà gli effetti Aero",
-  "Setting_gaming-network-throttling_Name": "Disabilita la limitazione della rete per i giochi",
-  "Setting_gaming-network-throttling_Description": "Disabilita la limitazione dei pacchetti di rete per ridurre la latenza e migliorare la reattività dei giochi online",
+  "Setting_gaming-network-throttling_Name": "Limitazione di rete",
+  "Setting_gaming-network-throttling_Description": "Controlla la limitazione della velocità dei pacchetti di rete per le applicazioni multimediali. Si consiglia di mantenere la limitazione attivata (predefinito: 10 pacchetti/ms) poiché offre una migliore latenza DPC per i giochi rispetto alla disattivazione completa",
   "Setting_gaming-nagle-algorithm_Name": "Abilita l'algoritmo di Nagle",
   "Setting_gaming-nagle-algorithm_Description": "Raggruppa piccoli pacchetti di rete prima dell'invio per migliorare l'efficienza. La disabilitazione riduce la latenza per i giochi online in tempo reale ma può aumentare leggermente l'utilizzo della larghezza di banda",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
