--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Windowsが全画面モードで実行されているゲームを最適化できるようにします。ボーダレス全画面最適化でうまく機能しない一部の古いゲームのパフォーマンスの問題やカクつきを修正するために無効にすることができます。",
   "Setting_gaming-performance-desktop-composition_Name": "デスクトップコンポジション効果",
   "Setting_gaming-performance-desktop-composition_Description": "デスクトップウィンドウマネージャーによって管理される視覚効果を有効にします。無効にすると、古いハードウェアでわずかなパフォーマンス向上が得られる場合がありますが、Aero効果が壊れます。",
-  "Setting_gaming-network-throttling_Name": "ゲームのネットワークスロットリングを無効にする",
-  "Setting_gaming-network-throttling_Description": "ネットワークパケットのスロットリングを無効にして、遅延を減らし、オンラインゲームの応答性を向上させます。",
+  "Setting_gaming-network-throttling_Name": "ネットワークスロットリング",
+  "Setting_gaming-network-throttling_Description": "マルチメディアアプリケーションのネットワークパケットレート制限を制御します。スロットリングを有効のまま（デフォルト：10パケット/ms）にすることを推奨します。完全に無効化するよりもゲーム向けのDPCレイテンシが向上します",
   "Setting_gaming-nagle-algorithm_Name": "Nagleのアルゴリズムを有効にする",
   "Setting_gaming-nagle-algorithm_Description": "効率を向上させるために、送信する前に小さなネットワークパケットをまとめてバッチ処理します。無効にすると、リアルタイムオンラインゲームの遅延が減少しますが、帯域幅の使用量がわずかに増加する可能性があります。",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
