--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Leisti Windows optimizuoti žaidimus, veikiančius pilno ekrano režimu. Išjungimas gali ištaisyti našumo problemas ar strigimą kai kuriuose senesniuose žaidimuose, kurie prastai veikia su berėmio pilno ekrano optimizavimu",
   "Setting_gaming-performance-desktop-composition_Name": "Darbalaukio kompozicijos efektai",
   "Setting_gaming-performance-desktop-composition_Description": "Įjungti vaizdinius efektus, valdomus darbalaukio langų tvarkytuvės. Išjungimas gali suteikti nedidelį našumo padidėjimą senesnėje aparatinėje įrangoje, bet sugadins Aero efektus",
-  "Setting_gaming-network-throttling_Name": "Išjungti tinklo droselį žaidimams",
-  "Setting_gaming-network-throttling_Description": "Išjungti tinklo paketų droselį, kad sumažėtų delsa ir pagerėtų internetinių žaidimų reagavimas",
+  "Setting_gaming-network-throttling_Name": "Tinklo ribojimas",
+  "Setting_gaming-network-throttling_Description": "Valdo tinklo paketų greičio ribojimą multimedijos programoms. Rekomenduojama palikti ribojimą įjungtą (numatytasis: 10 paketų/ms), nes tai užtikrina geresnę DPC delsą žaidimams nei visiškas išjungimas",
   "Setting_gaming-nagle-algorithm_Name": "Įjungti Nagle algoritmą",
   "Setting_gaming-nagle-algorithm_Description": "Grupuoti mažus tinklo paketus prieš siunčiant, kad pagerėtų efektyvumas. Išjungimas sumažina delsą realaus laiko internetiniams žaidimams, bet gali šiek tiek padidinti pralaidumo naudojimą",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox žaidimų DVR",
