--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Atļaut Windows optimizēt spēles, kas darbojas pilnekrāna režīmā. Atspējošana var novērst veiktspējas problēmas vai stostīšanos dažās vecākās spēlēs, kas nedarbojas labi ar bezrobežu pilnekrāna optimizāciju",
   "Setting_gaming-performance-desktop-composition_Name": "Darbvirsmas kompozīcijas efekti",
   "Setting_gaming-performance-desktop-composition_Description": "Iespējot vizuālos efektus, ko pārvalda darbvirsmas logu pārvaldnieks. Atspējošana var nodrošināt nelielus veiktspējas ieguvumus vecākai aparatūrai, bet sabojās Aero efektus",
-  "Setting_gaming-network-throttling_Name": "Atspējot tīkla ierobežošanu spēlēšanai",
-  "Setting_gaming-network-throttling_Description": "Atspējot tīkla pakešu ierobežošanu, lai samazinātu latentumu un uzlabotu tiešsaistes spēļu atsaucību",
+  "Setting_gaming-network-throttling_Name": "Tīkla ierobežošana",
+  "Setting_gaming-network-throttling_Description": "Kontrolē tīkla pakešu ātruma ierobežošanu multivides lietojumprogrammām. Ieteicams saglabāt ierobežošanu ieslēgtu (noklusējums: 10 paketes/ms), jo tā nodrošina labāku DPC latentumu spēlēm nekā pilnīga atspējošana",
   "Setting_gaming-nagle-algorithm_Name": "Iespējot Nagle algoritmu",
   "Setting_gaming-nagle-algorithm_Description": "Apvienot mazas tīkla paketes kopā pirms nosūtīšanas, lai uzlabotu efektivitāti. Atspējošana samazina latentumu reāllaika tiešsaistes spēlēm, bet var nedaudz palielināt joslas platuma izmantošanu",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox GameDVR",
