--- a/src/Winhance.UI/Features/Common/Localization/pt-BR.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt-BR.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Permitir que o Windows otimize jogos em modo de tela cheia. Desativar pode corrigir problemas de desempenho ou travamentos em alguns jogos mais antigos que não funcionam bem com a otimização de tela cheia sem bordas",
   "Setting_gaming-performance-desktop-composition_Name": "Efeitos de Composição da Área de Trabalho",
   "Setting_gaming-performance-desktop-composition_Description": "Ativar efeitos visuais gerenciados pelo Gerenciador de Janelas da Área de Trabalho. Desativar pode fornecer ganhos de desempenho menores em hardware mais antigo, mas quebrará os efeitos Aero",
-  "Setting_gaming-network-throttling_Name": "Desativar Limitação de Rede para Jogos",
-  "Setting_gaming-network-throttling_Description": "Desative a limitação de pacotes de rede para reduzir a latência e melhorar a responsividade em jogos online",
+  "Setting_gaming-network-throttling_Name": "Limitação de rede",
+  "Setting_gaming-network-throttling_Description": "Controla a limitação da taxa de pacotes de rede para aplicativos multimídia. É recomendado manter a limitação ativada (padrão: 10 pacotes/ms) pois oferece melhor latência DPC para jogos do que desativá-la completamente",
   "Setting_gaming-nagle-algorithm_Name": "Ativar Algoritmo de Nagle",
   "Setting_gaming-nagle-algorithm_Description": "Agrupar pequenos pacotes de rede antes de enviar para melhorar a eficiência. Desativar reduz a latência para jogos online em tempo real, mas pode aumentar ligeiramente o uso da largura de banda",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
