--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Разрешить Windows оптимизировать игры, работающие в полноэкранном режиме. Отключение может исправить проблемы с производительностью или заикания в некоторых старых играх, которые плохо работают с полноэкранной оптимизацией без рамок",
   "Setting_gaming-performance-desktop-composition_Name": "Эффекты композиции рабочего стола",
   "Setting_gaming-performance-desktop-composition_Description": "Включить визуальные эффекты, управляемые Диспетчером окон рабочего стола. Отключение может дать незначительный прирост производительности на старом оборудовании, но нарушит эффекты Aero",
-  "Setting_gaming-network-throttling_Name": "Отключить регулирование сети для игр",
-  "Setting_gaming-network-throttling_Description": "Отключить регулирование сетевых пакетов для уменьшения задержки и улучшения отзывчивости в онлайн-играх",
+  "Setting_gaming-network-throttling_Name": "Ограничение сети",
+  "Setting_gaming-network-throttling_Description": "Управляет ограничением скорости сетевых пакетов для мультимедийных приложений. Рекомендуется оставить ограничение включённым (по умолчанию: 10 пакетов/мс), так как это обеспечивает лучшую задержку DPC для игр, чем полное отключение",
   "Setting_gaming-nagle-algorithm_Name": "Включить алгоритм Нейгла",
   "Setting_gaming-nagle-algorithm_Description": "Объединять небольшие сетевые пакеты перед отправкой для повышения эффективности. Отключение уменьшает задержку для онлайн-игр в реальном времени, но может незначительно увеличить использование пропускной способности",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
