--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Tillåt Windows att optimera spel som körs i helskärmsläge. Att inaktivera kan åtgärda prestandaproblem eller hack i vissa äldre spel som inte fungerar bra med kantlös helskärmsoptimering",
   "Setting_gaming-performance-desktop-composition_Name": "Skrivbordssammansättningseffekter",
   "Setting_gaming-performance-desktop-composition_Description": "Aktivera visuella effekter som hanteras av Skrivbordsfönsterhanteraren. Inaktivering kan ge mindre prestandavinster på äldre hårdvara men kommer att bryta Aero-effekter",
-  "Setting_gaming-network-throttling_Name": "Inaktivera nätverksstrypning för spel",
-  "Setting_gaming-network-throttling_Description": "Inaktivera nätverkspaketstrypning för att minska latens och förbättra online-spelrespons",
+  "Setting_gaming-network-throttling_Name": "Nätverksbegränsning",
+  "Setting_gaming-network-throttling_Description": "Styr hastighetsbegränsning av nätverkspaket för multimediaapplikationer. Det rekommenderas att behålla begränsningen aktiverad (standard: 10 paket/ms) eftersom det ger bättre DPC-latens för spel än att inaktivera det helt",
   "Setting_gaming-nagle-algorithm_Name": "Aktivera Nagles algoritm",
   "Setting_gaming-nagle-algorithm_Description": "Samla små nätverkspaket innan de skickas för att förbättra effektiviteten. Inaktivering minskar latensen för realtids onlinespel men kan något öka bandbreddsanvändningen",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
