--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Дозволити Windows оптимізувати ігри, що працюють у повноекранному режимі. Вимкнення може виправити проблеми з продуктивністю або заїкання в деяких старих іграх, які погано працюють з оптимізацією повноекранного режиму без рамок",
   "Setting_gaming-performance-desktop-composition_Name": "Ефекти композиції робочого столу",
   "Setting_gaming-performance-desktop-composition_Description": "Увімкнути візуальні ефекти, керовані Менеджером вікон робочого столу. Вимкнення може забезпечити незначний приріст продуктивності на старому обладнанні, але порушить ефекти Aero",
-  "Setting_gaming-network-throttling_Name": "Вимкнути обмеження мережі для ігор",
-  "Setting_gaming-network-throttling_Description": "Вимкнути обмеження мережевих пакетів для зменшення затримки та покращення реакції в онлайн-іграх",
+  "Setting_gaming-network-throttling_Name": "Обмеження мережі",
+  "Setting_gaming-network-throttling_Description": "Керує обмеженням швидкості мережевих пакетів для мультимедійних застосунків. Рекомендується залишити обмеження увімкненим (за замовчуванням: 10 пакетів/мс), оскільки це забезпечує кращу затримку DPC для ігор, ніж повне вимкнення",
   "Setting_gaming-nagle-algorithm_Name": "Увімкнути алгоритм Нейгла",
   "Setting_gaming-nagle-algorithm_Description": "Групувати невеликі мережеві пакети перед відправкою для підвищення ефективності. Вимкнення зменшує затримку для онлайн-ігор у реальному часі, але може трохи збільшити використання пропускної здатності",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
