--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Cho phép Windows tối ưu hóa các trò chơi chạy ở chế độ toàn màn hình. Việc tắt có thể khắc phục các sự cố về hiệu suất hoặc giật hình trong một số trò chơi cũ không hoạt động tốt với tối ưu hóa toàn màn hình không viền",
   "Setting_gaming-performance-desktop-composition_Name": "Hiệu ứng bố cục màn hình",
   "Setting_gaming-performance-desktop-composition_Description": "Bật các hiệu ứng hình ảnh do Trình quản lý cửa sổ màn hình quản lý. Việc tắt có thể mang lại lợi ích nhỏ về hiệu suất trên phần cứng cũ hơn nhưng sẽ phá vỡ các hiệu ứng Aero",
-  "Setting_gaming-network-throttling_Name": "Tắt điều chỉnh mạng để chơi game",
-  "Setting_gaming-network-throttling_Description": "Tắt điều chỉnh gói mạng để giảm độ trễ và cải thiện khả năng phản hồi khi chơi game trực tuyến",
+  "Setting_gaming-network-throttling_Name": "Giới hạn mạng",
+  "Setting_gaming-network-throttling_Description": "Kiểm soát giới hạn tốc độ gói mạng cho các ứng dụng đa phương tiện. Nên giữ giới hạn được bật (mặc định: 10 gói/ms) vì nó cung cấp độ trễ DPC tốt hơn cho trò chơi so với việc tắt hoàn toàn",
   "Setting_gaming-nagle-algorithm_Name": "Bật thuật toán Nagle",
   "Setting_gaming-nagle-algorithm_Description": "Gộp các gói mạng nhỏ lại với nhau trước khi gửi để cải thiện hiệu quả. Việc tắt giúp giảm độ trễ khi chơi game trực tuyến thời gian thực nhưng có thể làm tăng nhẹ việc sử dụng băng thông",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
