--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "允許 Windows 最佳化以全螢幕模式執行的遊戲。停用此功能可能可以修復某些無法在無邊框全螢幕最佳化下正常運作的舊遊戲的效能問題或卡頓",
   "Setting_gaming-performance-desktop-composition_Name": "桌面轉譯效果",
   "Setting_gaming-performance-desktop-composition_Description": "啟用由桌面視窗管理員 (DWM) 管理的視覺效果。在舊硬體上停用可能會提供些微效能提升，但會破壞 Aero 效果",
-  "Setting_gaming-network-throttling_Name": "停用遊戲網路頻寬限制",
-  "Setting_gaming-network-throttling_Description": "停用網路封包頻寬限制以降低延遲並改善線上遊戲回應速度",
+  "Setting_gaming-network-throttling_Name": "網路限流",
+  "Setting_gaming-network-throttling_Description": "控制多媒體應用程式的網路封包速率限制。建議保持限流啟用狀態（預設：10 封包/毫秒），因為這比完全停用能為遊戲提供更好的 DPC 延遲",
   "Setting_gaming-nagle-algorithm_Name": "啟用 Nagle 演算法",
   "Setting_gaming-nagle-algorithm_Description": "在傳送前將小型網路封包批次處理以提高效率。停用可降低即時線上遊戲的延遲，但可能會稍微增加頻寬使用量",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
