--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Engedélyezze a Windows számára a teljes képernyős módban futó játékok optimalizálását. A letiltás javíthatja a teljesítményproblémákat vagy egyes régebbi játékok akadozását, amelyek nem működnek jól a szegély nélküli teljes képernyős optimalizálással",
   "Setting_gaming-performance-desktop-composition_Name": "Asztali vizuális hatások",
   "Setting_gaming-performance-desktop-composition_Description": "Engedélyezze az Asztali ablakkezelő által kezelt vizuális effektusokat. A letiltás kisebb teljesítménynövekedést eredményezhet régebbi hardvereken, de az Aero effektusok nem működnek.",
-  "Setting_gaming-network-throttling_Name": "Kapcsolja ki a hálózati korlátozást játékhoz",
-  "Setting_gaming-network-throttling_Description": "A várakozási idő csökkentése és az online játékok válaszkészségének javítása érdekében tiltsa le a hálózati csomagok szabályozását",
+  "Setting_gaming-network-throttling_Name": "Hálózati korlátozás",
+  "Setting_gaming-network-throttling_Description": "Szabályozza a hálózati csomagok sebességkorlátozását multimédiás alkalmazásokhoz. Ajánlott a korlátozást bekapcsolva hagyni (alapértelmezett: 10 csomag/ms), mivel jobb DPC-késleltetést biztosít játékokhoz, mint a teljes kikapcsolás",
   "Setting_gaming-nagle-algorithm_Name": "Engedélyezze a Nagle algoritmust",
   "Setting_gaming-nagle-algorithm_Description": "Csoportosítsa a kis hálózati csomagokat küldés előtt a hatékonyság növelése érdekében. A letiltása csökkenti a késleltetést a valós idejű online játékoknál, de kismértékben növelheti a sávszélesség-használatot",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox játékfelvétel",
