--- a/src/Winhance.UI/Features/Common/Localization/nl.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Sta Windows toe games te optimaliseren die in volledig scherm modus draaien. Uitschakelen kan prestatieproblemen of stotteren verhelpen in sommige oudere games die niet goed werken met optimalisatie voor randloos volledig scherm",
   "Setting_gaming-performance-desktop-composition_Name": "Desktop Compositie Effecten",
   "Setting_gaming-performance-desktop-composition_Description": "Schakel visuele effecten in die worden beheerd door Desktop Window Manager. Uitschakelen kan kleine prestatiewinsten opleveren op oudere hardware maar zal Aero-effecten verbreken",
-  "Setting_gaming-network-throttling_Name": "Netwerkbeperking uitschakelen voor Gamen",
-  "Setting_gaming-network-throttling_Description": "Schakel netwerkpakketbeperking uit om latentie te verminderen en responsiviteit van online gamen te verbeteren",
+  "Setting_gaming-network-throttling_Name": "Netwerkbeperking",
+  "Setting_gaming-network-throttling_Description": "Beheert de snelheidsbeperking van netwerkpakketten voor multimediatoepassingen. Het wordt aanbevolen om de beperking ingeschakeld te houden (standaard: 10 pakketten/ms) omdat dit betere DPC-latentie biedt voor games dan volledige uitschakeling",
   "Setting_gaming-nagle-algorithm_Name": "Nagle\u0027s Algoritme inschakelen",
   "Setting_gaming-nagle-algorithm_Description": "Batch kleine netwerkpakketten samen voor verzending om efficiëntie te verbeteren. Uitschakelen vermindert latentie voor realtime online gamen maar kan bandbreedtegebruik iets verhogen",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox GameDVR",
