--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Zezwalaj systemowi Windows na optymalizowanie gier działających w trybie pełnoekranowym. Wyłączenie może naprawić problemy z wydajnością lub zacinanie się w niektórych starszych grach, które nie działają dobrze z optymalizacją pełnoekranową bez ramki",
   "Setting_gaming-performance-desktop-composition_Name": "Efekty kompozycji pulpitu",
   "Setting_gaming-performance-desktop-composition_Description": "Włącz efekty wizualne zarządzane przez Menedżera okien pulpitu. Wyłączenie może zapewnić niewielkie zyski wydajności na starszym sprzęcie, ale spowoduje uszkodzenie efektów Aero",
-  "Setting_gaming-network-throttling_Name": "Wyłącz ograniczanie przepustowości sieci dla gier",
-  "Setting_gaming-network-throttling_Description": "Wyłącz ograniczanie pakietów sieciowych, aby zmniejszyć opóźnienia i poprawić responsywność gier online",
+  "Setting_gaming-network-throttling_Name": "Ograniczanie sieci",
+  "Setting_gaming-network-throttling_Description": "Kontroluje ograniczanie szybkości pakietów sieciowych dla aplikacji multimedialnych. Zaleca się pozostawienie ograniczania włączonego (domyślnie: 10 pakietów/ms), ponieważ zapewnia lepsze opóźnienie DPC dla gier niż całkowite wyłączenie",
   "Setting_gaming-nagle-algorithm_Name": "Włącz algorytm Nagle'a",
   "Setting_gaming-nagle-algorithm_Description": "Grupuj małe pakiety sieciowe przed wysłaniem, aby poprawić wydajność. Wyłączenie zmniejsza opóźnienia w grach online w czasie rzeczywistym, ale może nieznacznie zwiększyć zużycie przepustowości",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
