--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "Permitir que o Windows otimize jogos em modo de ecrã inteiro. Desativar pode corrigir problemas de desempenho ou intermitências em alguns jogos mais antigos que não funcionam bem com a otimização de ecrã inteiro sem margens",
   "Setting_gaming-performance-desktop-composition_Name": "Efeitos de Composição do Ambiente de Trabalho",
   "Setting_gaming-performance-desktop-composition_Description": "Ativar efeitos visuais geridos pelo Gestor de Janelas do Ambiente de Trabalho. Desativar pode proporcionar pequenos ganhos de desempenho em hardware mais antigo, mas irá quebrar os efeitos Aero",
-  "Setting_gaming-network-throttling_Name": "Desativar Limitação de Rede para Jogos",
-  "Setting_gaming-network-throttling_Description": "Desativar a limitação de pacotes de rede para reduzir a latência e melhorar a capacidade de resposta em jogos online",
+  "Setting_gaming-network-throttling_Name": "Limitação de rede",
+  "Setting_gaming-network-throttling_Description": "Controla a limitação da taxa de pacotes de rede para aplicações multimédia. Recomenda-se manter a limitação ativada (predefinição: 10 pacotes/ms) pois proporciona melhor latência DPC para jogos do que a desativação completa",
   "Setting_gaming-nagle-algorithm_Name": "Ativar Algoritmo de Nagle",
   "Setting_gaming-nagle-algorithm_Description": "Agrupar pequenos pacotes de rede antes de enviar para melhorar a eficiência. Desativar reduz a latência para jogos online em tempo real, mas pode aumentar ligeiramente o uso de largura de banda",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
