--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -606,8 +606,8 @@
   "Setting_gaming-fullscreen-optimizations_Description": "允许 Windows 优化在全屏模式下运行的游戏。在某些与无边框全屏优化不兼容的旧游戏中，禁用可以修复性能问题或卡顿",
   "Setting_gaming-performance-desktop-composition_Name": "桌面合成效果",
   "Setting_gaming-performance-desktop-composition_Description": "启用由桌面窗口管理器管理的视觉效果。禁用可能会在较旧的硬件上提供轻微的性能提升，但会破坏 Aero 效果",
-  "Setting_gaming-network-throttling_Name": "禁用游戏网络节流",
-  "Setting_gaming-network-throttling_Description": "禁用网络数据包节流，以减少延迟并提高在线游戏响应能力",
+  "Setting_gaming-network-throttling_Name": "网络限流",
+  "Setting_gaming-network-throttling_Description": "控制多媒体应用程序的网络数据包速率限制。建议保持限流启用状态（默认：10 数据包/毫秒），因为这比完全禁用能为游戏提供更好的 DPC 延迟",
   "Setting_gaming-nagle-algorithm_Name": "启用 Nagle 算法",
   "Setting_gaming-nagle-algorithm_Description": "在发送之前将小网络数据包批量处理以提高效率。禁用可减少实时在线游戏的延迟，但可能会略微增加带宽使用量",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
